infra/home-exporters/dsmr-p1-prometheus-exporter/dsmr-p1-prometheus-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsmr-p1-prometheus-exporter
  namespace: home-exporters
  labels:
    app: dsmr-p1-prometheus-exporter
    app.kubernetes.io/name: dsmr-p1-prometheus-exporter
spec:
  type: ClusterIP
  selector:
    app: dsmr-p1-prometheus-exporter
    app.kubernetes.io/name: dsmr-p1-prometheus-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
